# Research-Grant-Finder-Agent

./: README.md
NIH Extractor/: launch_ui.bat  launch_ui.vbs  pyproject.toml  restart_ui.bat  restart_ui.vbs  streamlit_app.py
NIH Extractor/nih_grant_matcher/: __init__.py  agents.py  cli.py  clients.py  config.py  digest.py  excel.py  filters.py  models.py  normalizer.py  scoring.py  store.py  workflow.py
NIH Extractor/tests/: test_clients.py  test_excel.py  test_filters.py  test_nih_guide.py  test_normalizer.py  test_scoring.py  test_store.py  test_streamlit_app_static.py
